2011-09-01  Donal K. Fellows  <dkf@users.sf.net>

	* doc/photo.n: Correctly documented what the [$ph data] command
	produces without the -format option.

2011-08-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinDialog.c: [Bug 3388350] mingw64 compiler warnings
	* win/tkWinDraw.c
	* win/tkWinSend.c
	* win/tkWinSendCom.c
	* win/tkWinColor.c
	* win/tkWinDialog.c
	* win/tkWinEmbed.c
	* win/tkWinMenu.c
	* win/tkWinPixmap.c
	* win/tkWinTest.c
	* win/tkWinWindow.c
	* win/tkWinWm.c
	* win/tkWinX.c
	* win/stubs.c
	* generic/tkAtom.c
	* generic/tkSelect.c

2011-08-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkBitmap.c: [Bug 3388350] mingw64 compiler warnings
	* generic/tkConsole.c
	* unix/tkUnixMenubu.c
	* win/tkWinButton.c
	* win/tkWinEmbed.c
	* win/tkWinFont.c
	* win/tkWinImage.c
	* win/tkWinKey.c
	* win/tkWinTest.c
	* win/tkWinWm.c

2011-08-03  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinDialog.c: [Bug 3314770] regression - Windows file
	dialogs not resizable

2011-07-28  Jan Nijtmans  <nijtmans@users.sf.net>

	* xlib/X11/Xutil.h: [Bug 3380684] XEmptyRegion prototype doesn't
	match usage

2011-06-29  Don Porter  <dgp@users.sourceforge.net>

	* generic/ttk/ttkTrace.c: [Bug 3341056] Correct segfault due to flaw
	* tests/ttk/ttk.test:	in the 2011-06-17 commit.

2011-06-23  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updated for 8.5.10 release.

2011-06-17  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.10 TAGGED FOR RELEASE ***

	* generic/ttk/ttkTrace.c:	Workaround Bug 3062331.
	* tests/ttk/ttk.test:
	* changes:	Updated

2011-06-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4: Sync with win/tcl.m4 from Tcl
	* win/configure: (regenerated)

2011-06-10  Don Porter  <dgp@users.sourceforge.net>

	* README:	Correct some README bitrot.
	* macosx/README:

	* generic/tkCanvLine.c: [Bug 3175610] Incomplete refresh of line item.
	Backport of 2011-03-03 trunk commit from Alexandre Ferrieux.

2011-06-08  Don Porter  <dgp@users.sourceforge.net>