@@ -316,6 +316,7 @@ TransferXEventsToTcl(
 	if (event.type == KeyPress || event.type == KeyRelease) {
 	    event.k.charValuePtr = NULL;
 	    event.k.charValueLen = 0;
+	    event.k.keysym = NoSymbol;
 
 	    /*
 	     * Force the calling of the input method engine now. The results
